--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,13 @@
 ---
 import CopyResumeButton from './CopyResumeButton.astro';
 
+interface Props {
+  cvSource: any;
+}
+
 // Footer component
 const currentYear = new Date().getFullYear();
+const { cvSource } = Astro.props;
 ---
 
 <footer class="footer" role="contentinfo">
@@ -20,7 +25,7 @@ const currentYear = new Date().getFullYear();
         </a>
       </nav>
       <div class="footer-cv-actions">
-        <CopyResumeButton idPrefix="footer-cv" />
+        <CopyResumeButton idPrefix="footer-cv" cvSource={cvSource} />
       </div>
     </div>
   </div>
